Added links to github and netlify

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Hello cutie</h1>
-    <footer>Built by Sarah Whitehouse</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/sarahwhitehouse17">Sarah Whitehouse</a> hosted
+      on
+      <a href="https://github.com/sarahwhitehouse17/weather-app">GitHub</a> and
+      on
+      <a href="https://main--weather-app-she-codes-17.netlify.app/">Netlify</a>
+    </footer>
   </body>
 </html>
