--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <h1>Hello cutie</h1>
     <footer>
       Coded by
-      <a href="https://github.com/sarahwhitehouse17">Sarah Whitehouse</a> hosted
-      on
-      <a href="https://github.com/sarahwhitehouse17/weather-app">GitHub</a> and
-      on
-      <a href="https://main--weather-app-she-codes-17.netlify.app/">Netlify</a>
+      <a href="https://github.com/sarahwhitehouse17" target="_blank"
+        >Sarah Whitehouse</a
+      >
+      open-sourced on
+      <a href="https://github.com/sarahwhitehouse17/weather-app" target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a
+        href="https://main--weather-app-she-codes-17.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
 </html>
