--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Hello cutie</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Madrid</h1>
+        <p>
+          Thursday 10:21, few clouds
+          <br />
+          Humidity: 75%, Wind: 11.32km/h
+        </p>
+      </div>
+      <div>☀️20°C</div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/sarahwhitehouse17" target="_blank"
