--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Madrid</h1>
-        <p>
-          Thursday 10:21, few clouds
-          <br />
-          Humidity: 75%, Wind: 11.32km/h
-        </p>
-      </div>
-      <div>☀️20°C</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/sarahwhitehouse17" target="_blank"
-        >Sarah Whitehouse</a
-      >
-      open-sourced on
-      <a href="https://github.com/sarahwhitehouse17/weather-app" target="_blank"
-        >GitHub</a
-      >
-      and hosted on
-      <a
-        href="https://main--weather-app-she-codes-17.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Madrid</h1>
+          <p>
+            Thursday 10:21, few clouds
+            <br />
+            Humidity: 75%, Wind: 11.32km/h
+          </p>
+        </div>
+        <div>☀️20°C</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/sarahwhitehouse17" target="_blank"
+          >Sarah Whitehouse</a
+        >
+        open-sourced on
+        <a
+          href="https://github.com/sarahwhitehouse17/weather-app"
+          target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a
+          href="https://main--weather-app-she-codes-17.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
