--- a/index.html
+++ b/index.html
@@ -15,21 +15,32 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Madrid</h1>
-          <p>
-            Thursday 10:21, few clouds
-            <br />
-            Humidity: 75%, Wind: 11.32km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Madrid</h1>
+            <p class="weather-app-details">
+              Thursday 10:21, few clouds
+              <br />
+              Humidity: <strong>75%</strong>, Wind: <strong>11.32km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-container">
+            <div class="weather-app-icon">☀️</div>
+            <div class="weather-app-temperature">20</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>☀️20°C</div>
       </main>
       <footer>
         Coded by
