--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="weather-app-city">Madrid</h1>
+            <h1 class="weather-app-city" id="weather-app-city"></h1>
             <p class="weather-app-details">
               Thursday 10:21, few clouds
               <br />
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-app-container">
             <div class="weather-app-icon">☀️</div>
-            <div class="weather-app-temperature">20</div>
+            <div class="weather-app-temperature" id="temperature">20</div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
