--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
           <div>
             <h1 class="weather-app-city" id="weather-app-city"></h1>
             <p class="weather-app-details">
-              Thursday 10:21, few clouds
+              <span id="time"></span>
+              <span id="description"></span>
               <br />
-              Humidity: <strong>75%</strong>, Wind: <strong>11.32km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="weather-app-container">
