--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
           </div>
           <div class="weather-app-container">
-            <div class="weather-app-icon">☀️</div>
+            <div class="weather-app-icon" id="icon"></div>
             <div class="weather-app-temperature" id="temperature">20</div>
             <div class="weather-app-unit">°C</div>
           </div>
